TGR-1399: Fix LocalProxyRbelMessageListener#getValidatableRbelMessages signature